--- a/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
+++ b/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
@@ -24,31 +24,31 @@
                     <!-- Nav items -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link active" href="/">
                                 <i class="ni ni-tv-2 text-primary"></i>
                                 <span class="nav-link-text">Index</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/Articulo">
                                 <i class="ni ni-planet text-orange"></i>
                                 <span class="nav-link-text">Articulos</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/Clientes">
                                 <i class="ni ni-single-02 text-primary"></i>
                                 <span class="nav-link-text">Clientes</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/Facturas">
                                 <i class="ni ni-bullet-list-67 text-yellow"></i>
                                 <span class="nav-link-text">Facturas</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" href="/Sucursales">
                                 <i class="ni ni-pin-3 text-default"></i>
                                 <span class="nav-link-text">Sucursales</span>
                             </a>
@@ -107,8 +107,8 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col">
-                                            <h5 class="card-title text-uppercase text-muted mb-0">Total ventas</h5>
-                                            <span class="h2 font-weight-bold mb-0">350,897</span>
+                                            <h5 class="card-title text-uppercase text-muted mb-0">Total facturas</h5>
+                                            <span class="h2 font-weight-bold mb-0">@proyectolibreria.Models.ViewModels.BaseViewModel.Iniciar().facturasCount</span>
                                         </div>
                                         <div class="col-auto">
                                             <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -127,7 +127,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <h5 class="card-title text-uppercase text-muted mb-0">Total articulos</h5>
-                                            <span class="h2 font-weight-bold mb-0">2,356</span>
+                                            <span class="h2 font-weight-bold mb-0">@proyectolibreria.Models.ViewModels.BaseViewModel.Iniciar().articulosCount</span>
                                         </div>
                                         <div class="col-auto">
                                             <div class="icon icon-shape bg-gradient-orange text-white rounded-circle shadow">
@@ -145,8 +145,8 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col">
-                                            <h5 class="card-title text-uppercase text-muted mb-0">Total autores</h5>
-                                            <span class="h2 font-weight-bold mb-0">924</span>
+                                            <h5 class="card-title text-uppercase text-muted mb-0">Total sucursales</h5>
+                                            <span class="h2 font-weight-bold mb-0">@proyectolibreria.Models.ViewModels.BaseViewModel.Iniciar().sucursalesCount</span>
                                         </div>
                                         <div class="col-auto">
                                             <div class="icon icon-shape bg-gradient-green text-white rounded-circle shadow">
