--- a/proyectolibreria/proyectolibreria/Content/css/argon.css
+++ b/proyectolibreria/proyectolibreria/Content/css/argon.css
@@ -3347,19 +3347,17 @@ fieldset:disabled a.btn
     pointer-events: none;
 }
 
-.btn-primary
-{
+.btn-primary {
     color: #fff;
-    border-color: #5e72e4;
-    background-color: #5e72e4;
+    border-color: #7E57C2;
+    background-color: #7E57C2;
     box-shadow: 0 4px 6px rgba(50, 50, 93, .11), 0 1px 3px rgba(0, 0, 0, .08);
 }
-.btn-primary:hover
-{
-    color: #fff;
-    border-color: #5e72e4; 
-    background-color: #5e72e4;
-}
+    .btn-primary:hover {
+        color: #fff;
+        border-color: #7E57C2;
+        background-color: #7E57C2;
+    }
 .btn-primary:focus,
 .btn-primary.focus
 {
@@ -3827,38 +3825,34 @@ fieldset:disabled a.btn
     box-shadow: none, 0 0 0 0 rgba(0, 0, 0, .5);
 }
 
-.btn-outline-primary
-{
-    color: #5e72e4;
-    border-color: #5e72e4; 
+.btn-outline-primary {
+    color: #7E57C2;
+    border-color: #7E57C2;
     background-color: transparent;
     background-image: none;
 }
-.btn-outline-primary:hover
-{
-    color: #fff;
-    border-color: #5e72e4; 
-    background-color: #5e72e4;
-}
+    .btn-outline-primary:hover {
+        color: #fff;
+        border-color: #7E57C2;
+        background-color: #7E57C2;
+    }
 .btn-outline-primary:focus,
 .btn-outline-primary.focus
 {
     box-shadow: 0 0 0 0 rgba(94, 114, 228, .5);
 }
-.btn-outline-primary.disabled,
-.btn-outline-primary:disabled
-{
-    color: #5e72e4;
-    background-color: transparent;
-}
-.btn-outline-primary:not(:disabled):not(.disabled):active,
-.btn-outline-primary:not(:disabled):not(.disabled).active,
-.show > .btn-outline-primary.dropdown-toggle
-{
-    color: #fff;
-    border-color: #5e72e4; 
-    background-color: #5e72e4;
-}
+    .btn-outline-primary.disabled,
+    .btn-outline-primary:disabled {
+        color: #7E57C2;
+        background-color: transparent;
+    }
+    .btn-outline-primary:not(:disabled):not(.disabled):active,
+    .btn-outline-primary:not(:disabled):not(.disabled).active,
+    .show > .btn-outline-primary.dropdown-toggle {
+        color: #fff;
+        border-color: #7E57C2;
+        background-color: #7E57C2;
+    }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus
@@ -4295,13 +4289,10 @@ fieldset:disabled a.btn
     box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
 }
 
-.btn-link
-{
+.btn-link {
     font-weight: 400;
-
-    text-decoration: none; 
-
-    color: #5e72e4;
+    text-decoration: none;
+    color: #7E57C2;
 }
 .btn-link:hover
 {
@@ -5122,28 +5113,25 @@ input[type='button'].btn-block
 
     opacity: 0;
 }
-.custom-control-input:checked ~ .custom-control-label::before
-{
-    color: #fff;
-    border-color: #5e72e4;
-    background-color: #5e72e4;
-    box-shadow: 0 3px 2px rgba(233, 236, 239, .05);
-}
+    .custom-control-input:checked ~ .custom-control-label::before {
+        color: #fff;
+        border-color: #7E57C2;
+        background-color: #7E57C2;
+        box-shadow: 0 3px 2px rgba(233, 236, 239, .05);
+    }
 .custom-control-input:focus ~ .custom-control-label::before
 {
     box-shadow: 0 3px 2px rgba(233, 236, 239, .05), 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, .1);
 }
-.custom-control-input:focus:not(:checked) ~ .custom-control-label::before
-{
-    border-color: #5e72e4;
-}
-.custom-control-input:not(:disabled):active ~ .custom-control-label::before
-{
-    color: #fff;
-    border-color: #5e72e4;
-    background-color: #5e72e4;
-    box-shadow: 0 3px 2px rgba(233, 236, 239, .05);
-}
+    .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
+        border-color: #7E57C2;
+    }
+    .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
+        color: #fff;
+        border-color: #7E57C2;
+        background-color: #7E57C2;
+        box-shadow: 0 3px 2px rgba(233, 236, 239, .05);
+    }
 .custom-control-input[disabled] ~ .custom-control-label,
 .custom-control-input:disabled ~ .custom-control-label
 {
@@ -5207,10 +5195,9 @@ input[type='button'].btn-block
     background-image: url('data:image/svg+xml,%3csvg xmlns=\'http://www.w3.org/2000/svg\' width=\'8\' height=\'8\' viewBox=\'0 0 8 8\'%3e%3cpath fill=\'%23fff\' d=\'M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z\'/%3e%3c/svg%3e');
 }
 
-.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before
-{
-    border-color: #5e72e4;
-    background-color: #5e72e4;
+.custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
+    border-color: #7E57C2;
+    background-color: #7E57C2;
     box-shadow: none;
 }
 
@@ -5313,12 +5300,11 @@ input[type='button'].btn-block
        -moz-appearance: none;
             appearance: none;
 }
-.custom-select:focus
-{
-    border-color: #5e72e4;
-    outline: 0;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, .075), 0 0 0 0 #5e72e4;
-}
+    .custom-select:focus {
+        border-color: #7E57C2;
+        outline: 0;
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, .075), 0 0 0 0 #7E57C2;
+    }
 .custom-select:focus::-ms-value
 {
     color: #8898aa;
@@ -5389,11 +5375,10 @@ input[type='button'].btn-block
 
     opacity: 0;
 }
-.custom-file-input:focus ~ .custom-file-label
-{
-    border-color: #5e72e4;
-    box-shadow: 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, .1);
-}
+    .custom-file-input:focus ~ .custom-file-label {
+        border-color: #7E57C2;
+        box-shadow: 0 3px 9px rgba(50, 50, 9, 0), 3px 4px 8px rgba(94, 114, 228, .1);
+    }
 .custom-file-input[disabled] ~ .custom-file-label,
 .custom-file-input:disabled ~ .custom-file-label
 {
@@ -5483,22 +5468,18 @@ input[type='button'].btn-block
 {
     border: 0;
 }
-.custom-range::-webkit-slider-thumb
-{
-    width: 1rem;
-    height: 1rem;
-    margin-top: -.25rem;
-
-    transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
-
-    border: 0;
-    border-radius: 1rem;
-    background-color: #5e72e4;
-    box-shadow: 0 .1rem .25rem rgba(0, 0, 0, .1);
-
-    -webkit-appearance: none;
-            appearance: none;
-}
+    .custom-range::-webkit-slider-thumb {
+        width: 1rem;
+        height: 1rem;
+        margin-top: -.25rem;
+        transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+        border: 0;
+        border-radius: 1rem;
+        background-color: #7E57C2;
+        box-shadow: 0 .1rem .25rem rgba(0, 0, 0, .1);
+        -webkit-appearance: none;
+        appearance: none;
+    }
 @media (prefers-reduced-motion: reduce)
 {
     .custom-range::-webkit-slider-thumb
