--- a/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
+++ b/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
@@ -36,19 +36,19 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Clientes">
+                            <a class="nav-link" href="/Cliente">
                                 <i class="ni ni-single-02 text-primary"></i>
                                 <span class="nav-link-text">Clientes</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Facturas">
+                            <a class="nav-link" href="/Factura">
                                 <i class="ni ni-bullet-list-67 text-yellow"></i>
                                 <span class="nav-link-text">Facturas</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/Sucursales">
+                            <a class="nav-link" href="/Sucursale">
                                 <i class="ni ni-pin-3 text-default"></i>
                                 <span class="nav-link-text">Sucursales</span>
                             </a>
