--- a/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
+++ b/proyectolibreria/proyectolibreria/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
         <div class="scrollbar-inner">
             <!-- Brand -->
             <div class="sidenav-header  align-items-center">
-                <a class="navbar-brand" href="javascript:void(0)">
+                <a class="navbar-brand" href="/">
                     <img src="@Url.Content("~/Content/img/brand/blue.png")" class="navbar-brand-img" alt="...">
                 </a>
             </div>
@@ -90,7 +90,7 @@
                 <div class="header-body">
                     <div class="row align-items-center py-4">
                         <div class="col-lg-6 col-7">
-                            <h6 class="h2 text-white d-inline-block mb-0">@ViewBag.Title</h6>
+                            <h6 class="h2 text-white d-inline-block mb-0">@ViewBag.Title</h6> <!--Titulo dinámico-->
                             <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                                     <li class="breadcrumb-item"><i class="fa fa-home"></i></li>
